fix(AccessoryMenu): Add missing z-index properties

--- a/app/common/AccessoryMenu/AccessoryMenu.module.scss
+++ b/app/common/AccessoryMenu/AccessoryMenu.module.scss
@@ -3,9 +3,11 @@
 
   .button {
     position: relative;
+    z-index: 10;
   }
 
   .container {
+    z-index: 20;
     position: absolute;
     top: 0;
     right: 0;
